添加数据源可以覆盖老的数据源 (#301)
* 添加同样名称的数据源时， 老数据源可能不为空。 通过老数据源获取的连接正在执行获取连接，查询等操作， 所以在覆盖了连接后，应该关闭老的数据源

* 增加JndiDataSourceCreator老的创建方式的支持， 添加数据源时，支持替换。